Feat : ajout de la gestion des groupes de TP / TD

--- a/MegaPlanning/src/pages/Home.css
+++ b/MegaPlanning/src/pages/Home.css
@@ -12,11 +12,27 @@
     width:fit-content;
   
     text-align: center;
-    margin-top: 20vh;
-    transform: translateY(-50%);
+
+    margin-top: 10px;
   }
 
   .eventNow {  
+    display: flex;
+    flex-direction: column;
+    background-color: #114B5F;
+    border-radius: 12px;
+    margin: 5px;
+    padding: 5px;
+  
+    width:fit-content;
+  }
+
+  .eventNowContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     background-color: #FF865E;
     border-radius: 12px;
   
@@ -24,11 +40,17 @@
     max-width: 90%;
   
     text-align: center;
-    margin-top: 10vh;
-    margin-bottom: 15px;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 5px;
   }
 
   .eventLaterContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     background-color: #1A936F;
     border-radius: 12px;
@@ -42,6 +64,8 @@
   }
 
   .eventLater{
+    display: flex;
+    flex-direction: column;
     background-color: #114B5F;
     border-radius: 12px;
     margin: 5px;
@@ -51,10 +75,17 @@
 
   }
 
-  .label_event_now{
+  .label_event{
     font-size: 16px;
     font-weight: 1000;
     color: black;
+    padding:10px
+  }
+
+  .label_event_now{
+    font-size: 16px;
+    font-weight: 1000;
+    color: #F3E9D2;
     padding:10px
   }
   
@@ -78,3 +109,6 @@
     padding: 10px;
   }
   
+  .item-content{
+    background-color: #FF865E;
+  }
