--- a/MegaPlanning/src/pages/MenuCrous.css
+++ b/MegaPlanning/src/pages/MenuCrous.css
@@ -1,10 +1,13 @@
+
 .containerMenu{  
+    flex :1;
     background-color: #FF865E;
     border-radius: 12px;
   
     width:fit-content;
   
 
-    margin-top: 10px;
+    margin:10px;
+
     padding: 10px;
 }
