--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -12,4 +12,7 @@ ion-content {
     margin:10px;
     padding: 10px;
 }
-  
+/*
+Passe en bottom tabs navigation + modification de layouts et début de refactoring.
+Les nouveaux design sont plus adaptés aux versions mobiles que web à voir quel est l'objectif de l'application.
+**/
