--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -20,13 +20,13 @@ http://ionicframework.com/docs/theming/ */
 	--ion-color-secondary-tint: #ff926e;
 
   /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
-
+	--ion-color-tertiary: #114B5F;
+	--ion-color-tertiary-rgb: 17,75,95;
+	--ion-color-tertiary-contrast: #ffffff;
+	--ion-color-tertiary-contrast-rgb: 255,255,255;
+	--ion-color-tertiary-shade: #0f4254;
+	--ion-color-tertiary-tint: #295d6f;
+  
   /** success **/
   --ion-color-success: #2dd36f;
   --ion-color-success-rgb: 45, 211, 111;
